--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
